2009-03-11  Aaron Faupell  <afaupell@users.sourceforge.net>
	rest.tcl: make http methods upper case
		add 301 to redirect errors

2009-02-06  Aaron Faupell  <afaupell@users.sourceforge.net>

	twitter: forgot to check this one in
	flickr: fixed some broken or incomplete calls

2009-02-05  Aaron Faupell  <afaupell@users.sourceforge.net>

	rest.tcl: fix some errors regarding static args, the body command
	rest.man: add more documentation and examples. still needs formatting
	facebook: remove extraneous line in sign proc

2009-02-04  Aaron Faupell  <afaupell@users.sourceforge.net>

	Initial commit
